# AIOA---Personal-Finance-Manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  PHASE2_IMPLEMENTATION.md  QUICKSTART.md  README.md  alembic.ini  main.py  plan.md  project.toml  pyproject.toml  requirements.txt  start.sh  status.md
Prompt/: 1. current_apiFeatures.md  2. Phase2.md
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_udhar_khata_contacts_loans.py  003_recurring_transactions.py  004_tags.py  005_goals.py  006_password_reset_tokens.py
app/: main.py
app/agents/: __init__.py  base.py  codex_agent.py  factory.py  qwen_agent.py  working_station.py
app/api/: accounts.py  auth.py  budgets.py  categories.py  contacts.py  dashboard.py  goals.py  loans.py  recurring_transactions.py  reports.py  tags.py  transactions.py
app/core/: config.py  database.py  logger.py  security.py
app/models/: __init__.py  account.py  budget.py  category.py  contact.py  goal.py  loan.py  loan_entry.py  password_reset.py  recurring_transaction.py  tag.py  transaction.py  user.py
app/schemas/: account.py  auth.py  budget.py  category.py  contact.py  dashboard.py  goal.py  loan.py  pagination.py  recurring_transaction.py  tag.py  transaction.py
app/services/: account_service.py  auth_service.py  budget_service.py  category_service.py  contact_service.py  (+8 more)
scripts/: seed.py
tests/: conftest.py  test_accounts.py  test_auth.py  test_goals.py  test_loans.py  test_password_reset.py  test_reports_series.py  test_statement_pdf_parser.py  test_transactions.py
